Fix footer layout bugs with long issue titles
1. if the issue title is longer than 30 chars, we now use h3 not h2
2. just in case there's still some sort of vertical text overflow, the
   footer's height is now dynamic (min of 400)

--- a/django/notesfrombelow/static/css/styles.css
+++ b/django/notesfrombelow/static/css/styles.css
@@ -100,7 +100,7 @@ hr {
 #footer {
     background: url('/static/img/bottom.png');
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     background-repeat: repeat-x;
     color: #fff;
 }
